--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>React App</title>
+    <title>City X</title>
   </head>
   <body class="hold-transition skin-blue sidebar-mini">
     <noscript>
@@ -44,9 +44,9 @@
         <!-- Logo -->
         <a href="index2.html" class="logo">
          <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini">IT</span>
+          <span class="logo-mini">CX</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg">I-Tick</span>
+          <span class="logo-lg">City X</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top">
@@ -64,7 +64,7 @@
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                  <span class="hidden-xs">Alexander Pierce</span>
+                  <span class="hidden-xs">Davide Kung</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
@@ -72,7 +72,7 @@
                     <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                     <p>
-                      Alexander Pierce - Web Developer
+                      Davide Kung - Hourse Developer
                       <small>Member since Nov. 2012</small>
                     </p>
                   </li>
@@ -120,15 +120,15 @@
             <li class="active treeview">
               <a href="#">
                 <i class="fa fa-pie-chart"></i>
-                <span>Index</span>
+                <span>Search</span>
               </a>
             </li>
-            <li class="treeview">
+            <!-- <li class="treeview">
               <a href="#">
                 <i class="fa fa-pie-chart"></i>
                 <span>Chat</span>
               </a>
-            </li>
+            </li> -->
           </ul>
         </section>
         <!-- /.sidebar -->
