--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,7 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
-            Chat
-            <small>Chat with smart claim robot.</small>
+            Discovery City in you hand
           </h1>
         </section>
 
